; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_edac_device_sysfs.c_edac_device_ctl_log_ue_store.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_edac_device_sysfs.c_edac_device_ctl_log_ue_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.edac_device_ctl_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.edac_device_ctl_info*, i8*, i64)* @edac_device_ctl_log_ue_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @edac_device_ctl_log_ue_store(%struct.edac_device_ctl_info* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.edac_device_ctl_info*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.edac_device_ctl_info* %0, %struct.edac_device_ctl_info** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i64 @simple_strtoul(i8* %7, i32* null, i32 0)
  %9 = icmp ne i64 %8, 0
  %10 = zext i1 %9 to i32
  %11 = load %struct.edac_device_ctl_info*, %struct.edac_device_ctl_info** %4, align 8
  %12 = getelementptr inbounds %struct.edac_device_ctl_info, %struct.edac_device_ctl_info* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load i64, i64* %6, align 8
  ret i64 %13
}

declare dso_local i64 @simple_strtoul(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
